# Fuel-Economy-Report-Infosys-Capstone

./: .gitignore  LICENSE  pyproject.toml  readme.md
fix_data/: df_2008.csv  df_2009.csv  df_2010.csv  df_2011.csv  df_2012.csv  df_2013.csv  df_2014.csv  df_2015.csv  df_2016.csv  df_2017.csv  df_2018.csv  df_2019.csv  df_2020.csv  df_2021.csv  df_2022.csv  df_2023.csv  df_2024.csv  df_2025.csv
predicator/: __init__.py  predicator_smart_way.py
